<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PetsActivity"
    android:background="@color/gray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:layout_editor_absoluteY="731dp">

                <ImageButton
                    android:id="@+id/pet_1"
                    style="@style/petsButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/pet_1"
                    android:src="@drawable/pet1"
                    android:scaleType="fitCenter"
                    android:layout_margin="10dp"
                    android:backgroundTint="@color/brown_01"/>

                <ImageButton
                    android:id="@+id/pet_2"
                    style="@style/petsButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/pet_2"
                    android:layout_margin="10dp"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageButton
                    android:id="@+id/pet_3"
                    style="@style/petsButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/pet_3"
                    android:layout_margin="10dp"
                    android:visibility="invisible"/>

                <ImageButton
                    android:id="@+id/pet_4"
                    style="@style/petsButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/pet_4"
                    android:layout_margin="10dp"
                    android:visibility="invisible"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/pet_5"
                    style="@style/petsButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/pet_5"
                    android:layout_margin="10dp"
                    android:visibility="invisible"/>

                <ImageButton
                    android:id="@+id/pet_6"
                    style="@style/petsButtonStyle"
                    android:layout_weight="1"
                    android:text="@string/pet_6"
                    android:layout_margin="10dp"
                    android:visibility="invisible"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>