<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".WordsActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                        <Button
                            android:id="@+id/word2000"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:text="@string/_2000"
                            android:backgroundTint="@color/purple_500"/>

                        <Button
                            android:id="@+id/word4500"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:text="@string/_4500" />

                        <Button
                            android:id="@+id/word7000"
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            android:layout_margin="10dp"
                            android:text="@string/_7000"
                            android:backgroundTint="@color/purple_700"/>

                </LinearLayout>
        </ScrollView>


</LinearLayout>