<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_shop"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/button_shop"
        android:backgroundTint="@color/yellow"
        app:cornerRadius="50pt"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/listofpets"
        android:layout_width="match_parent"
        android:layout_height="489dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pet1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_pet"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:text="@string/button_pet"
            app:cornerRadius="50pt"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="4dp" />

        <Button
            android:id="@+id/button_work"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:text="@string/button_work"
            android:backgroundTint="@color/orange_03"
            app:cornerRadius="50pt"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="4dp" />

        <Button
            android:id="@+id/button_words"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_weight="1"
            android:text="@string/button_words"
            app:cornerRadius="50pt"
            app:strokeColor="#FFFFFF"
            app:strokeWidth="4dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>